All functionality complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,23 @@
+spring.datasource.url = jdbc:postgresql://rainbowdb.cd6oufhpp0fw.us-east-2.rds.amazonaws.com:5432/RainbowDB1
+spring.datasource.username = ${DB_USERNAME}
+spring.datasource.password = ${DB_PASSWORD}
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.spatial.dialect.postgis.PostgisDialect
+
+spring.jpa.hibernate.default_schema = main
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 
 jwt.secret = "secret"
+
+s3.endpointUrl = photoupload-040578156432.s3-accesspoint.us-east-2.amazonaws.com
+s3.bucketName = post-photos
+s3.accessKeyId = AKIAIQYBTFUUB7TL6N4Q
+s3.secretKey = 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
+s3.region = us-east-2
+
+app.version = 1.0.0
+
+server.port = 5000
