--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ jwt.secret = "secret"
 
 s3.endpointUrl = photoupload-040578156432.s3-accesspoint.us-east-2.amazonaws.com
 s3.bucketName = post-photos
-s3.accessKeyId = AKIAIQYBTFUUB7TL6N4Q
-s3.secretKey = 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
+s3.accessKeyId = ${ACCESS_KEY_ID}
+s3.secretKey = ${SECRET_KEY}
 s3.region = us-east-2
 
 app.version = 1.0.0
