--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://rainbowdb.cd6oufhpp0fw.us-east-2.rds.amazonaws.com:5432/RainbowDB1
+spring.datasource.url = ${DATASOURCE_URL}
 spring.datasource.username = ${DB_USERNAME}
 spring.datasource.password = ${DB_PASSWORD}
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
@@ -10,14 +10,14 @@ spring.jpa.hibernate.default_schema = main
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 
-jwt.secret = "secret"
+jwt.secret = ${JWT_SECRET}
 
-s3.endpointUrl = photoupload-040578156432.s3-accesspoint.us-east-2.amazonaws.com
-s3.bucketName = post-photos
+s3.endpointUrl = ${S3_ENDPOINT_URL}
+s3.bucketName = ${S3_BUCKET_NAME}
 s3.accessKeyId = ${ACCESS_KEY_ID}
 s3.secretKey = ${SECRET_KEY}
-s3.region = us-east-2
+s3.region = ${S3_REGION}
 
 app.version = 1.0.0
 
-server.port = 5000
+server.port = ${PORT}
